...
      />
      <Tab.Screen
        name="Settings"
        component={ProfileScreen}
        initialParams={props.route.params}
        options={{
          tabBarLabel: 'Profile',
          tabBarIcon: ({ color, size }) => <Ionicons name="person" color={color} size={size} />,
        }}
      />
    </Tab.Navigator>
  );
}
...
