...
                setIsLoggedIn(true);
                if (continueAnonymousCallbackFn) {
                  continueAnonymousCallbackFn();
                }
              }}
            >
              <Text style={globalStyles.button.text.default}>Continue anonymous</Text>
            </Pressable>
          </>
        ) : (
          <></>
        )}
      </View>
...
