appId: com.acorn.alist
---
- launchApp:
    appId: com.acorn.alist
    clearState: true
- assertVisible: "Continue anonymous"
- tapOn: "Continue anonymous"
- tapOn: "Profile"
- assertVisible: "Sign in with Google"
